Complete Ticket CRUD operations with DTO and Mapper